--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
       "import/no-unresolved": "off",
       "no-shadow": "off",
       "react/prop-types": "off",
-      "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+      "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+      "no-param-reassign": 0
     },
     "ignorePatterns": [
       "dist/",
